# sTori

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_FONTS.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: windows-release.yml
public/: manifest.webmanifest  sw.js
scripts/: release_windows.ps1  smoke_release_windows.ps1
src/: App.tsx  fonts.css  main.tsx  polish.css  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  downloads.rs  epub_validation.rs  error.rs  lib.rs  main.rs  models.rs  scanner.rs  server.rs
src/components/: BookCard.tsx  Shell.tsx
src/lib/: api.ts  format.test.ts  genres.ts  typography.ts
src/pages/: BookDetailPage.tsx  CollectionsPage.tsx  DownloadsPage.test.ts  DownloadsPage.tsx  HomePage.tsx  LibraryPage.tsx  ReaderPage.tsx  SearchPage.tsx  SettingsPage.tsx
